--- a/docs/package.json
+++ b/docs/package.json
@@ -5,7 +5,7 @@
     "dev": "vitepress dev",
     "build": "vitepress build"
   },
-  "devDependencies": {
-    "vitepress": "^1.3.2"
+  "dependencies": {
+    "vitepress": "^1.4.1"
   }
 }
