--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -8,7 +8,8 @@
       "@superstreamer/artisan",
       "@superstreamer/dashboard",
       "@superstreamer/shared",
-      "@superstreamer/stitcher"
+      "@superstreamer/stitcher",
+      "docs"
     ]
   ],
   "linked": [],
