--- a/docs/package.json
+++ b/docs/package.json
@@ -1,11 +1,11 @@
 {
   "name": "docs",
-  "private": true,
+  "version": "1.1.0",
   "scripts": {
     "dev": "vitepress dev",
     "build": "vitepress build"
   },
-  "devDependencies": {
-    "vitepress": "^1.3.2"
+  "dependencies": {
+    "vitepress": "^1.4.1"
   }
 }
