--- a/packages/artisan/package.json
+++ b/packages/artisan/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "bun --watch ./src/consumer/index.ts",
     "build": "tsc -b && bun build ./src/consumer/index.ts --target=bun --outdir=./dist",
+    "test": "bun test",
     "lint": "eslint",
     "install-bin": "./scripts/install-bin.sh"
   },
