--- a/packages/stitcher/wrangler.toml
+++ b/packages/stitcher/wrangler.toml
@@ -4,6 +4,7 @@ compatibility_date = "2024-09-23"
 send_metrics = false
 
 [vars]
+SERVERLESS = "true"
 PORT = "0"
 HOST = "0.0.0.0"
 REDIS_HOST = "redis"
