Added API call for transcode to stitcher instead of Redis queue

--- a/packages/stitcher/package.json
+++ b/packages/stitcher/package.json
@@ -34,6 +34,7 @@
     "redis": "^4.7.0",
     "shared": "workspace:*",
     "uuid": "^10.0.0",
-    "vast-client": "workspace:*"
+    "vast-client": "workspace:*",
+    "@superstreamer/api": "workspace:*"
   }
 }
