--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,10 +19,11 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.623.0",
     "@elysiajs/cors": "^1.1.1",
+    "@elysiajs/eden": "^1.1.3",
     "@elysiajs/swagger": "^1.1.5",
     "@superstreamer/artisan": "workspace:*",
-    "shared": "workspace:*",
     "bullmq": "^5.12.0",
-    "elysia": "^1.1.20"
+    "elysia": "^1.1.20",
+    "shared": "workspace:*"
   }
 }
