--- a/packages/stitcher/package.json
+++ b/packages/stitcher/package.json
@@ -7,7 +7,7 @@
     "build": "tsc -b && bun build ./src/index.ts --target=bun --outdir=./dist",
     "test": "bun test",
     "lint": "eslint",
-    "deploy:wrangler": "wrangler deploy --minify src/serverless/wrangler.ts"
+    "deploy:cloudflare": "wrangler deploy --minify src/serverless/cloudflare.ts"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241022.0",
