--- a/packages/stitcher/package.json
+++ b/packages/stitcher/package.json
@@ -7,9 +7,10 @@
     "build": "tsc -b && bun build ./src/index.ts --target=bun --outdir=./dist",
     "test": "bun test",
     "lint": "eslint",
-    "deploy:wrangler": "wrangler deploy --minify src/serverless/wrangler.ts"
+    "deploy:cloudflare": "wrangler deploy --minify src/serverless/cloudflare.ts"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241022.0",
     "@types/bun": "latest",
     "@types/hh-mm-ss": "^1.2.3",
     "@types/lru-cache": "^7.10.10",
@@ -24,7 +25,6 @@
   "dependencies": {
     "@elysiajs/cors": "^1.1.1",
     "@elysiajs/swagger": "^1.1.5",
-    "@superstreamer/artisan": "workspace:*",
     "@xmldom/xmldom": "^0.8.10",
     "dom-parser": "^1.1.5",
     "elysia": "^1.1.20",
@@ -34,6 +34,7 @@
     "redis": "^4.7.0",
     "shared": "workspace:*",
     "uuid": "^10.0.0",
-    "vast-client": "workspace:*"
+    "vast-client": "workspace:*",
+    "@superstreamer/api": "workspace:*"
   }
 }
