--- a/packages/stitcher/wrangler.toml
+++ b/packages/stitcher/wrangler.toml
@@ -4,9 +4,15 @@ compatibility_date = "2024-09-23"
 send_metrics = false
 
 [vars]
+SERVERLESS = "true"
 PORT = "0"
 HOST = "0.0.0.0"
 REDIS_HOST = "redis"
 REDIS_PORT = "0000"
 PUBLIC_S3_ENDPOINT = "https://cdn.superstreamer.xyz"
 PUBLIC_STITCHER_ENDPOINT = "https://stitcher.superstreamer.xyz"
+PUBLIC_API_ENDPOINT = "https://api.tunnel.superstreamer.xyz"
+
+[[kv_namespaces]]
+binding = "kv"
+id = "08ccfb81f250464ead5689f1e2b36432"
