Added drizzle ORM

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/pg": "^8.11.10",
     "config": "workspace:*",
     "eslint": "^9.13.0",
     "typescript": "^5.6.3"
@@ -23,7 +24,9 @@
     "@elysiajs/swagger": "^1.1.5",
     "@superstreamer/artisan": "workspace:*",
     "bullmq": "^5.12.0",
+    "drizzle-orm": "^0.35.3",
     "elysia": "^1.1.20",
+    "pg": "^8.13.1",
     "shared": "workspace:*"
   }
 }
