--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,6 +14,7 @@
     "@types/bun": "latest",
     "@types/pg": "^8.11.10",
     "config": "workspace:*",
+    "drizzle-kit": "^0.26.2",
     "eslint": "^9.13.0",
     "typescript": "^5.6.3"
   },
@@ -21,6 +22,7 @@
     "@aws-sdk/client-s3": "^3.623.0",
     "@elysiajs/cors": "^1.1.1",
     "@elysiajs/eden": "^1.1.3",
+    "@elysiajs/jwt": "^1.1.1",
     "@elysiajs/swagger": "^1.1.5",
     "@superstreamer/artisan": "workspace:*",
     "bullmq": "^5.12.0",
