--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,24 +11,24 @@
     "lint": "eslint"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.11",
     "@types/bun": "latest",
-    "@types/pg": "^8.11.10",
     "config": "workspace:*",
-    "drizzle-kit": "^0.26.2",
     "eslint": "^9.13.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.623.0",
+    "@elysiajs/bearer": "^1.1.2",
     "@elysiajs/cors": "^1.1.1",
     "@elysiajs/eden": "^1.1.3",
     "@elysiajs/jwt": "^1.1.1",
     "@elysiajs/swagger": "^1.1.5",
     "@superstreamer/artisan": "workspace:*",
     "bullmq": "^5.12.0",
-    "drizzle-orm": "^0.35.3",
     "elysia": "^1.1.20",
-    "pg": "^8.13.1",
+    "kysely": "^0.27.4",
+    "kysely-bun-sqlite": "^0.3.2",
     "shared": "workspace:*"
   }
 }
