--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -8,8 +8,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@autoform/react": "^2.1.0",
+    "@autoform/zod": "^2.0.0",
     "@hookform/resolvers": "^3.9.0",
-    "@superstreamer/player": "workspace:*",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -26,16 +27,19 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@superstreamer/player": "workspace:*",
     "@tanstack/react-query": "^5.51.21",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
+    "date-fns": "^4.1.0",
     "hls.js": "1.6.0-beta.1",
     "lucide-react": "^0.424.0",
     "monaco-editor": "^0.51.0",
     "pretty-bytes": "^6.1.1",
     "pretty-ms": "^9.1.0",
     "react": "^18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-resizable-panels": "^2.1.4",
@@ -49,19 +53,19 @@
   },
   "devDependencies": {
     "@superstreamer/api": "workspace:*",
-    "shared": "workspace:*",
     "@types/node": "^22.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.7",
-    "tsx": "^4.19.1",
-    "vite": "^5.3.4",
     "config": "workspace:*",
     "eslint": "^9.13.0",
-    "typescript": "^5.6.3"
+    "postcss": "^8.4.41",
+    "shared": "workspace:*",
+    "tailwindcss": "^3.4.7",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3",
+    "vite": "^5.3.4"
   }
 }
