--- a/packages/artisan/package.json
+++ b/packages/artisan/package.json
@@ -13,20 +13,22 @@
     "install-bin": "./scripts/install-bin.sh"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.623.0",
-    "@aws-sdk/lib-storage": "^3.669.0",
-    "shared": "workspace:*",
+    "@aws-sdk/client-s3": "^3.679.0",
+    "@aws-sdk/lib-storage": "^3.679.0",
+    "@aws-sdk/s3-request-presigner": "^3.679.0",
     "@sinclair/typebox": "^0.33.16",
     "bullmq": "^5.12.0",
     "execa": "^9.4.0",
-    "ffmpeggy": "^3.0.1",
+    "fluent-ffmpeg": "^2.1.3",
     "iso-language-codes": "^2.0.0",
     "mime-types": "^2.1.35",
     "parse-filepath": "^1.0.2",
-    "s3-sync-client": "^4.3.1"
+    "s3-sync-client": "^4.3.1",
+    "shared": "workspace:*"
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/mime-types": "^2.1.4",
     "@types/parse-filepath": "^1.0.2",
     "config": "workspace:*",
