--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@superstreamer/player": "workspace:*",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -18,6 +17,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
@@ -26,6 +26,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@superstreamer/player": "workspace:*",
     "@tanstack/react-query": "^5.51.21",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -49,19 +50,19 @@
   },
   "devDependencies": {
     "@superstreamer/api": "workspace:*",
-    "shared": "workspace:*",
     "@types/node": "^22.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.7",
-    "tsx": "^4.19.1",
-    "vite": "^5.3.4",
     "config": "workspace:*",
     "eslint": "^9.13.0",
-    "typescript": "^5.6.3"
+    "postcss": "^8.4.41",
+    "shared": "workspace:*",
+    "tailwindcss": "^3.4.7",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3",
+    "vite": "^5.3.4"
   }
 }
