--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -28,12 +28,14 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@superstreamer/player": "workspace:*",
     "@tanstack/react-query": "^5.51.21",
+    "@types/nprogress": "^0.2.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
     "hls.js": "1.6.0-beta.1",
     "lucide-react": "^0.424.0",
     "monaco-editor": "^0.51.0",
+    "nprogress": "^0.2.0",
     "pretty-bytes": "^6.1.1",
     "pretty-ms": "^9.1.0",
     "react": "^18.3.1",
