--- a/config.env.example
+++ b/config.env.example
@@ -14,3 +14,5 @@ PUBLIC_API_ENDPOINT=http://localhost:52001
 PUBLIC_STITCHER_ENDPOINT=http://localhost:52002
 PUBLIC_S3_ENDPOINT=
 
+# API specific
+API_JWT_SECRET=
