--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,6 +22,7 @@
     "@elysiajs/cors": "^1.1.1",
     "@elysiajs/eden": "^1.1.3",
     "@elysiajs/jwt": "^1.1.1",
+    "@matvp91/elysia-swagger": "^2.0.0",
     "@superstreamer/artisan": "workspace:*",
     "bullmq": "^5.12.0",
     "elysia": "^1.1.20",
