--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -45,6 +45,7 @@
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.52.2",
     "react-resizable-panels": "^2.1.4",
     "react-router-dom": "^6.26.0",
