--- a/packages/stitcher/package.json
+++ b/packages/stitcher/package.json
@@ -31,6 +31,7 @@
     "dom-parser": "^1.1.5",
     "elysia": "^1.1.20",
     "hh-mm-ss": "^1.2.0",
+    "jose": "^5.9.6",
     "lru-cache": "^11.0.1",
     "luxon": "^3.5.0",
     "redis": "^4.7.0",
