--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,22 +12,21 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/pg": "^8.11.10",
     "config": "workspace:*",
     "eslint": "^9.13.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.623.0",
-    "@elysiajs/bearer": "^1.1.2",
     "@elysiajs/cors": "^1.1.1",
     "@elysiajs/eden": "^1.1.3",
-    "@elysiajs/jwt": "^1.1.1",
     "@matvp91/elysia-swagger": "^2.0.0",
     "@superstreamer/artisan": "workspace:*",
     "bullmq": "^5.12.0",
     "elysia": "^1.1.20",
     "kysely": "^0.27.4",
-    "kysely-bun-sqlite": "^0.3.2",
+    "pg": "^8.13.1",
     "shared": "workspace:*"
   }
 }
