--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "exports": {
     "./env": "./src/env.ts",
-    "./scalar": "./src/scalar.ts",
     "./typebox": "./src/typebox.ts",
-    "./lang": "./src/lang.ts"
+    "./lang": "./src/lang.ts",
+    "./auth": "./src/auth.ts"
   },
   "scripts": {
     "lint": "eslint"
@@ -15,6 +15,9 @@
   "dependencies": {
     "@sinclair/typebox": "^0.33.16",
     "dotenv": "^16.4.5",
+    "elysia": "^1.1.20",
+    "@elysiajs/bearer": "^1.1.2",
+    "@elysiajs/jwt": "^1.1.1",
     "find-config": "^1.0.0",
     "iso-language-codes": "^2.0.0"
   },
