--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/pg": "^8.11.10",
     "config": "workspace:*",
     "eslint": "^9.13.0",
     "typescript": "^5.6.3"
@@ -20,10 +21,12 @@
     "@aws-sdk/client-s3": "^3.623.0",
     "@elysiajs/cors": "^1.1.1",
     "@elysiajs/eden": "^1.1.3",
-    "@elysiajs/swagger": "^1.1.5",
+    "@matvp91/elysia-swagger": "^2.0.0",
     "@superstreamer/artisan": "workspace:*",
     "bullmq": "^5.12.0",
     "elysia": "^1.1.20",
+    "kysely": "^0.27.4",
+    "pg": "^8.13.1",
     "shared": "workspace:*"
   }
 }
