--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -8,9 +8,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@autoform/react": "^2.1.0",
+    "@autoform/zod": "^2.0.0",
     "@hookform/resolvers": "^3.9.0",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -32,6 +35,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
+    "date-fns": "^4.1.0",
     "hls.js": "1.6.0-beta.1",
     "lucide-react": "^0.424.0",
     "monaco-editor": "^0.51.0",
@@ -39,7 +43,9 @@
     "pretty-bytes": "^6.1.1",
     "pretty-ms": "^9.1.0",
     "react": "^18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.52.2",
     "react-resizable-panels": "^2.1.4",
     "react-router-dom": "^6.26.0",
