--- a/packages/stitcher/package.json
+++ b/packages/stitcher/package.json
@@ -25,17 +25,18 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^1.1.1",
-    "@elysiajs/swagger": "^1.1.5",
+    "@matvp91/elysia-swagger": "^2.0.0",
+    "@superstreamer/api": "workspace:*",
     "@xmldom/xmldom": "^0.8.10",
     "dom-parser": "^1.1.5",
     "elysia": "^1.1.20",
     "hh-mm-ss": "^1.2.0",
+    "jose": "^5.9.6",
     "lru-cache": "^11.0.1",
     "luxon": "^3.5.0",
     "redis": "^4.7.0",
     "shared": "workspace:*",
     "uuid": "^10.0.0",
-    "vast-client": "workspace:*",
-    "@superstreamer/api": "workspace:*"
+    "vast-client": "workspace:*"
   }
 }
