--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "type": "module",
   "exports": {
-    "./client": "./src/client.ts"
+    "./client": "./client/index.ts"
   },
   "scripts": {
     "dev": "bun --watch ./src/index.ts",
@@ -19,8 +19,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.623.0",
+    "@elysiajs/bearer": "^1.1.2",
     "@elysiajs/cors": "^1.1.1",
     "@elysiajs/eden": "^1.1.3",
+    "@elysiajs/jwt": "^1.1.1",
     "@matvp91/elysia-swagger": "^2.0.0",
     "@superstreamer/artisan": "workspace:*",
     "bullmq": "^5.12.0",
