--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -7,7 +7,7 @@
     "./env": "./src/env.ts",
     "./typebox": "./src/typebox.ts",
     "./lang": "./src/lang.ts",
-    "./auth": "./src/auth.ts"
+    "./jwt": "./src/jwt.ts"
   },
   "scripts": {
     "lint": "eslint"
@@ -19,7 +19,8 @@
     "@elysiajs/bearer": "^1.1.2",
     "@elysiajs/jwt": "^1.1.1",
     "find-config": "^1.0.0",
-    "iso-language-codes": "^2.0.0"
+    "iso-language-codes": "^2.0.0",
+    "jose": "^5.9.6"
   },
   "devDependencies": {
     "@types/find-config": "^1.0.4",
