--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -14,12 +14,8 @@
   "dependencies": {
     "@sinclair/typebox": "^0.33.16",
     "dotenv": "^16.4.5",
-    "elysia": "^1.1.20",
-    "@elysiajs/bearer": "^1.1.2",
-    "@elysiajs/jwt": "^1.1.1",
     "find-config": "^1.0.0",
-    "iso-language-codes": "^2.0.0",
-    "jose": "^5.9.6"
+    "iso-language-codes": "^2.0.0"
   },
   "devDependencies": {
     "@types/find-config": "^1.0.4",
