--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -25,7 +25,7 @@
     "@elysiajs/eden": "^1.1.3",
     "@elysiajs/jwt": "^1.1.1",
     "@matvp91/elysia-swagger": "^2.0.0",
-    "@superstreamer/artisan": "workspace:*",
+    "bolt": "workspace:*",
     "bullmq": "^5.12.0",
     "elysia": "^1.1.20",
     "jose": "^5.9.6",
