--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,12 +3,13 @@
   "version": "1.1.0",
   "type": "module",
   "exports": {
-    "./client": "./src/client.ts"
+    "./client": "./client.ts"
   },
   "scripts": {
     "dev": "bun --watch ./src/index.ts",
     "build": "tsc -b && bun build ./src/index.ts --target=bun --outdir=./dist",
-    "lint": "eslint"
+    "lint": "eslint",
+    "migrate": "bun run ./src/db/migrate.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
@@ -19,12 +20,15 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.623.0",
+    "@elysiajs/bearer": "^1.1.2",
     "@elysiajs/cors": "^1.1.1",
     "@elysiajs/eden": "^1.1.3",
+    "@elysiajs/jwt": "^1.1.1",
     "@matvp91/elysia-swagger": "^2.0.0",
-    "@superstreamer/artisan": "workspace:*",
+    "bolt": "workspace:*",
     "bullmq": "^5.12.0",
     "elysia": "^1.1.20",
+    "jose": "^5.9.6",
     "kysely": "^0.27.4",
     "pg": "^8.13.1",
     "shared": "workspace:*"
