--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "config/tsconfig.vite.json",
-  "include": ["src"],
+  "include": ["src", "vite.config.ts"],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
