--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -6,6 +6,7 @@
     "dev": "NODE_OPTIONS=\"--import tsx/esm\" pnpm exec vite"
   },
   "devDependencies": {
+    "@types/javascript-time-ago": "^2.0.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -21,15 +22,18 @@
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/use-infinite-scroll": "^2.1.5",
     "@superstreamer/api": "workspace:*",
-    "@tanstack/react-query": "^5.51.21",
     "@tanstack/react-router": "^1.78.3",
     "@tanstack/router-plugin": "^1.78.3",
     "@tanstack/router-zod-adapter": "^1.78.3",
     "clsx": "^2.1.1",
-    "jotai": "^2.10.1",
+    "javascript-time-ago": "^2.5.11",
+    "lucide-react": "^0.424.0",
+    "pretty-bytes": "^6.1.1",
+    "pretty-ms": "^9.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "use-local-storage-state": "^19.4.1",
     "zod": "^3.23.8"
   }
 }
