--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "use-local-storage-state": "^19.4.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@superstreamer/player": "workspace:*"
   }
 }
