--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 
 volumes:
   superstreamer_redis_data:
+  superstreamer_postgres_data:
 
 services:
   superstreamer-app:
@@ -16,11 +17,13 @@ services:
     ports:
       - 52001:52001
     depends_on:
+      - superstreamer-postgres
       - superstreamer-redis
     env_file: config.env
     environment:
       - REDIS_HOST=superstreamer-redis
       - REDIS_PORT=6379
+      - DATABASE_URI=postgresql://sprs:sprs@superstreamer-postgres/sprs
 
   superstreamer-stitcher:
     image: "superstreamerapp/stitcher:latest"
@@ -52,3 +55,15 @@ services:
       test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
     volumes:
       - superstreamer_redis_data:/data
+
+  superstreamer-postgres:
+    image: "postgres:17"
+    restart: always
+    stop_signal: SIGINT
+    volumes:
+      - superstreamer_postgres_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_INITDB_ARGS=--data-checksums
+      - POSTGRES_DB=sprs
+      - POSTGRES_USERNAME=sprs
+      - POSTGRES_PASSWORD=sprs
