--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     environment:
       - REDIS_HOST=superstreamer-redis
       - REDIS_PORT=6379
-      - DATABASE_URI=postgresql://sprs:sprs@superstreamer-postgres/sprs
+      - DATABASE_URI=postgresql://postgres:sprs@superstreamer-postgres/sprs
 
   superstreamer-stitcher:
     image: "superstreamerapp/stitcher:alpha"
@@ -57,13 +57,14 @@ services:
       - superstreamer_redis_data:/data
 
   superstreamer-postgres:
-    image: "postgres"
+    image: "postgres:latest"
     restart: always
     stop_signal: SIGINT
+    ports:
+      - "5432:5432"
     volumes:
       - superstreamer_postgres_data:/var/lib/postgresql/data
     environment:
       - POSTGRES_INITDB_ARGS=--data-checksums
       - POSTGRES_DB=sprs
-      - POSTGRES_USERNAME=sprs
       - POSTGRES_PASSWORD=sprs
