--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "superstreamer",
   "scripts": {
-    "dev": "turbo dev --filter=\"@superstreamer/*\"",
-    "build": "turbo build --filter=\"@superstreamer/*\"",
-    "lint": "turbo lint --force --continue",
-    "test": "turbo test --force --continue",
-    "install-bin": "turbo install-bin"
+    "dev": "bun run --filter=\"@superstreamer/*\" dev",
+    "build": "bun run --filter=\"@superstreamer/*\" build",
+    "lint": "bun run --filter=\"*\" lint",
+    "test": "bun run --filter=\"*\" test",
+    "install-bin": "bun run --filter=\"@superstreamer/*\" install-bin"
   },
-  "packageManager": "pnpm@8.15.1",
   "devDependencies": {
-    "@changesets/cli": "^2.27.9",
-    "turbo": "^2.1.3"
-  }
+    "@changesets/cli": "^2.27.9"
+  },
+  "workspaces": [
+    "packages/*",
+    "extern/*",
+    "docs"
+  ]
 }
