--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,8 +3,8 @@
   "version": "1.1.0",
   "type": "module",
   "scripts": {
-    "dev": "NODE_OPTIONS=\"--import tsx/esm\" pnpm exec vite",
-    "build": "tsc -b && NODE_OPTIONS=\"--import tsx/esm\" pnpm exec vite build",
+    "dev": "bunx --bun vite",
+    "build": "bunx --bun vite build",
     "lint": "eslint"
   },
   "devDependencies": {
@@ -17,8 +17,8 @@
     "postcss": "^8.4.41",
     "shared": "workspace:*",
     "tailwindcss": "^3.4.7",
-    "tsx": "^4.19.1",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "eslint": "^9.13.0"
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
