--- a/packages/artisan/package.json
+++ b/packages/artisan/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "bun --watch ./src/index.ts",
-    "build": "tsc -b && bun build ./src/index.ts --target=bun --outdir=./dist",
+    "build": "bun build ./src/index.ts --target=bun --outdir=./dist",
     "test": "bun test",
     "lint": "eslint",
     "install-bin": "./scripts/install-bin.sh"
@@ -13,7 +13,7 @@
     "@aws-sdk/client-s3": "^3.679.0",
     "@aws-sdk/lib-storage": "^3.679.0",
     "@aws-sdk/s3-request-presigner": "^3.679.0",
-    "@sinclair/typebox": "^0.33.16",
+    "@sinclair/typebox": "^0.32.34",
     "bullmq": "^5.12.0",
     "execa": "^9.4.0",
     "fluent-ffmpeg": "^2.1.3",
