--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -13,15 +13,16 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@sinclair/typebox": "^0.33.16",
+    "@sinclair/typebox": "^0.32.34",
     "dotenv": "^16.4.5",
     "find-config": "^1.0.0",
-    "iso-language-codes": "^2.0.0"
+    "iso-language-codes": "^2.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/find-config": "^1.0.4",
     "config": "workspace:*",
-    "eslint": "^9.13.0",
+    "eslint": "^9.14.0",
     "typescript": "^5.6.3"
   }
 }
