--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,18 +14,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: pnpm/action-setup@v3
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: pnpm
       - name: Setup bun
         uses: oven-sh/setup-bun@v2
       - name: Install dependencies
-        run: pnpm install
+        run: bun install
       - name: Build
-        env:
-          PUBLIC_API_ENDPOINT: http://api
-          PUBLIC_STITCHER_ENDPOINT: http://stitcher
-        run: pnpm build
+        run: bun run build
