--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,16 +14,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
-      - uses: pnpm/action-setup@v3
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: pnpm
+      - name: Setup bun
+        uses: oven-sh/setup-bun@v2
       - name: Install dependencies
-        run: pnpm install
+        run: bun install
       - name: Run unit tests
-        run: pnpm test
+        run: pnpm run test
