--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -44,7 +44,7 @@
     "format": "esm",
     "splitting": false,
     "sourcemap": true,
-    "clean": true,
+    "clean": false,
     "dts": true
   }
 }
