--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "bunx --bun vite",
     "build": "bunx --bun vite build",
-    "lint": "eslint"
+    "lint": "tsc && eslint"
   },
   "devDependencies": {
     "@types/javascript-time-ago": "^2.0.8",
@@ -21,6 +21,7 @@
     "eslint": "^9.13.0"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/use-infinite-scroll": "^2.1.5",
     "@superstreamer/api": "workspace:*",
