--- a/packages/artisan/package.json
+++ b/packages/artisan/package.json
@@ -6,7 +6,7 @@
     "dev": "bun --watch ./src/index.ts",
     "build": "bun build ./src/index.ts --target=bun --outdir=./dist",
     "test": "bun test",
-    "lint": "eslint",
+    "lint": "tsc && eslint",
     "install-bin": "./scripts/install-bin.sh"
   },
   "dependencies": {
