--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -25,8 +25,8 @@
   ],
   "scripts": {
     "dev": "tsup --watch",
-    "build": "tsup",
-    "lint": "eslint",
+    "build": "tsc && tsup",
+   "lint": "tsc && eslint",
     "typedoc": "typedoc --tsconfig tsconfig.typedoc.json"
   },
   "peerDependencies": {
