--- a/packages/stitcher/package.json
+++ b/packages/stitcher/package.json
@@ -6,7 +6,7 @@
     "dev": "bun --watch ./runtime/local.ts",
     "build": "bun build ./runtime/local.ts --target=bun --outdir=./dist",
     "test": "bun test",
-    "lint": "eslint",
+   "lint": "tsc && eslint",
     "dev:cloudflare": "wrangler dev runtime/cloudflare.ts",
     "deploy:cloudflare": "wrangler deploy --minify runtime/cloudflare.ts"
   },
