--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Install dependencies
         run: bun install
       - name: Run unit tests
-        run: pnpm run test
+        run: bun run test
