fix: Run node installer only on docs folder

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -27,6 +27,7 @@ jobs:
           fetch-depth: 0
       - name: Setup node
         uses: actions/setup-node@v4
+        working-directory: ./docs
         with:
           node-version: 20
           cache: npm
