--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,9 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: "docs"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,17 +30,15 @@ jobs:
           fetch-depth: 0
       - name: Setup node
         uses: actions/setup-node@v4
-        working-directory: ./docs
         with:
           node-version: 20
           cache: npm
+          cache-dependency-path: "**/package-lock.json"
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
-        working-directory: ./docs
         run: npm ci
       - name: Build with VitePress
-        working-directory: ./docs
         run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
