--- a/packages/artisan/package.json
+++ b/packages/artisan/package.json
@@ -14,15 +14,16 @@
     "@aws-sdk/lib-storage": "^3.679.0",
     "@aws-sdk/s3-request-presigner": "^3.679.0",
     "@sinclair/typebox": "^0.32.34",
+    "bolt": "workspace:*",
     "bullmq": "^5.12.0",
     "execa": "^9.4.0",
     "fluent-ffmpeg": "^2.1.3",
     "iso-language-codes": "^2.0.0",
     "mime-types": "^2.1.35",
     "parse-filepath": "^1.0.2",
+    "pretty-print-error": "^1.1.2",
     "s3-sync-client": "^4.3.1",
-    "shared": "workspace:*",
-    "bolt": "workspace:*"
+    "shared": "workspace:*"
   },
   "devDependencies": {
     "@types/bun": "latest",
