--- a/packages/artisan/package.json
+++ b/packages/artisan/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/lib-storage": "^3.679.0",
     "@aws-sdk/s3-request-presigner": "^3.679.0",
     "@sinclair/typebox": "^0.32.34",
+    "@smithy/util-retry": "^3.0.8",
     "bolt": "workspace:*",
     "bullmq": "^5.12.0",
     "execa": "^9.4.0",
