chore: Updated env example

--- a/config.env.example
+++ b/config.env.example
@@ -14,5 +14,10 @@ PUBLIC_API_ENDPOINT=http://localhost:52001
 PUBLIC_STITCHER_ENDPOINT=http://localhost:52002
 PUBLIC_S3_ENDPOINT=
 
-# API specific
-API_JWT_SECRET=
+# Shared secret
+# *** Never EVER expose this publicly, auth tokens are signed with this secret.
+SUPER_SECRET=
+
+# Database
+# Provide a PostgreSQL connection string
+DATABASE_URI=postgresql://
