--- a/packages/stitcher/package.json
+++ b/packages/stitcher/package.json
@@ -3,10 +3,10 @@
   "version": "1.1.0",
   "type": "module",
   "scripts": {
-    "dev": "bun --watch ./runtime/local.ts",
+    "dev": "bun --watch --inspect=ws://localhost:6499/sprs-stitcher ./runtime/local.ts",
     "build": "bun build ./runtime/local.ts --target=bun --outdir=./dist",
     "test": "bun test",
-   "lint": "tsc && eslint",
+    "lint": "tsc && eslint",
     "dev:cloudflare": "wrangler dev runtime/cloudflare.ts",
     "deploy:cloudflare": "wrangler deploy --minify runtime/cloudflare.ts"
   },
