--- a/docker/integrations/minio/docker-compose.yml
+++ b/docker/integrations/minio/docker-compose.yml
@@ -7,12 +7,12 @@ services:
   superstreamer-minio:
     image: quay.io/minio/minio
     environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
+      MINIO_ROOT_USER: sprs
+      MINIO_ROOT_PASSWORD: sprs
     command: server /data --console-address ":9001"
     ports:
-      - "9000:9000" # API
-      - "9001:9001" # Console
+      - "9000:9000"
+      - "9001:9001"
     volumes:
       - superstreamer_minio_data:/data
     healthcheck:
@@ -21,14 +21,14 @@ services:
       timeout: 5s
       retries: 5
 
-  createbuckets:
+  superstreamer-minio-bootstrap:
     image: minio/mc
     depends_on:
       superstreamer-minio:
         condition: service_healthy
     entrypoint: >
       /bin/sh -c "
-      mc alias set myminio http://superstreamer-minio:9000 minioadmin minioadmin;
-      mc mb myminio/superstreamer;
+      mc alias set myminio http://superstreamer-minio:9000 sprs sprs;
+      mc mb myminio/sprs;
       exit 0;
       "
