--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -18,6 +18,10 @@
     "./react": {
       "types": "./dist/react.d.ts",
       "default": "./dist/react.js"
+    },
+    "./player": {
+      "types": "./dist/player.d.ts",
+      "default": "./dist/player.js"
     }
   },
   "files": [
