--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -28,13 +28,18 @@
     "@elysiajs/cors": "^1.1.1",
     "@elysiajs/eden": "^1.1.3",
     "@elysiajs/jwt": "1.1.0",
+    "@hono/zod-validator": "^0.4.2",
     "@matvp91/elysia-swagger": "^2.0.0",
     "bolt": "workspace:*",
     "bullmq": "^5.25.0",
     "elysia": "^1.1.24",
+    "hono": "^4.7.0",
+    "hono-openapi": "^0.4.4",
     "kysely": "^0.27.4",
     "pg": "^8.13.1",
-    "shared": "workspace:*"
+    "shared": "workspace:*",
+    "zod": "^3.24.2",
+    "zod-openapi": "^4.2.3"
   },
   "tsup": {
     "entry": {
