Added app logic

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -49,6 +49,7 @@
     "splitting": false,
     "sourcemap": true,
     "clean": false,
-    "dts": true
+    "dts": true,
+    "noExternal": ["../src"]
   }
 }
