--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,13 +4,12 @@
   "type": "module",
   "exports": {
     "./client": {
-      "types": "./dist/client.d.ts",
-      "default": "./dist/client.js"
+      "default": "./client/index.ts"
     }
   },
   "scripts": {
-    "dev": "bun run ./scripts/dev.ts",
-    "build": "bun run ./scripts/build.ts",
+    "dev": "bun --watch --inspect=ws://localhost:6499/sprs-api ./src/index.ts",
+    "build": "bun build ./src/index.ts --target=bun --outdir=./dist",
     "lint": "tsc && eslint"
   },
   "devDependencies": {
@@ -24,15 +23,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.685.0",
     "@aws-sdk/s3-request-presigner": "^3.685.0",
-    "@elysiajs/bearer": "^1.1.2",
-    "@elysiajs/cors": "^1.1.1",
-    "@elysiajs/eden": "^1.1.3",
-    "@elysiajs/jwt": "1.1.0",
     "@hono/zod-validator": "^0.4.2",
-    "@matvp91/elysia-swagger": "^2.0.0",
     "bolt": "workspace:*",
     "bullmq": "^5.25.0",
-    "elysia": "^1.1.24",
     "hono": "^4.7.0",
     "hono-openapi": "^0.4.4",
     "kysely": "^0.27.4",
@@ -49,7 +42,6 @@
     "splitting": false,
     "sourcemap": true,
     "clean": false,
-    "dts": true,
-    "noExternal": ["../src"]
+    "dts": true
   }
 }
