--- a/packages/artisan/package.json
+++ b/packages/artisan/package.json
@@ -23,7 +23,8 @@
     "mime-types": "^2.1.35",
     "parse-filepath": "^1.0.2",
     "s3-sync-client": "^4.3.1",
-    "shared": "workspace:*"
+    "shared": "workspace:*",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/bun": "latest",
