--- a/packages/bolt/package.json
+++ b/packages/bolt/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bullmq": "^5.12.0",
-    "shared": "workspace:*"
+    "shared": "workspace:*",
+    "zod": "^3.24.2"
   }
 }
