Moved to middleware for CF workers support

--- a/apps/stitcher/package.json
+++ b/apps/stitcher/package.json
@@ -4,18 +4,21 @@
   "type": "module",
   "scripts": {
     "dev": "bun --watch --inspect=ws://localhost:6500/sprs-stitcher ./src/index.ts",
+    "dev:wrangler": "wrangler dev ./src/index.ts",
     "build": "bun build ./src/index.ts --target=bun --outdir=./dist",
     "test": "bun test",
     "lint": "tsc && eslint"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250214.0",
     "@types/bun": "latest",
     "@types/hh-mm-ss": "^1.2.3",
     "@types/luxon": "^3.4.2",
     "@types/uuid": "^10.0.0",
     "config": "workspace:*",
     "eslint": "^9.14.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "wrangler": "^3.109.1"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.4.2",
