--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "superstreamer",
   "scripts": {
-    "dev": "NODE_ENV=development bun run --filter=\"@superstreamer/*\" dev",
+    "dev": "NODE_ENV=development bun run ./scripts/dev.ts",
     "build": "NODE_ENV=production bun run ./scripts/build.ts",
     "lint": "bun run ./scripts/lint.ts",
     "test": "bun run ./scripts/test.ts",
