--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,20 +4,18 @@
   "version": "1.0.0",
   "type": "module",
   "exports": {
-    "./env": "./src/env.ts",
-    "./lang": "./src/lang.ts",
+    "./hono/middleware": "./src/hono/middleware.ts",
     "./assert": "./src/assert.ts"
   },
   "scripts": {
     "lint": "tsc && eslint"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "find-config": "^1.0.0",
+    "hono": "^4.7.1",
+    "hono-openapi": "^0.4.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/find-config": "^1.0.4",
     "config": "workspace:*",
     "eslint": "^9.14.0",
     "typescript": "^5.6.3"
