Added REDIS_URI in favor of REDIS_HOST/PORT
Co-authored-by: sebbean

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,8 +15,7 @@ services:
       - superstreamer-redis
     env_file: .env
     environment:
-      - REDIS_HOST=superstreamer-redis
-      - REDIS_PORT=6379
+      - REDIS_URI=redis://superstreamer-redis:6379
       - DATABASE_URI=postgresql://postgres:sprs@superstreamer-postgres/sprs
 
   superstreamer-app:
@@ -34,8 +33,7 @@ services:
       - superstreamer-redis
     env_file: .env
     environment:
-      - REDIS_HOST=superstreamer-redis
-      - REDIS_PORT=6379
+      - REDIS_URI=redis://superstreamer-redis:6379
 
   superstreamer-stitcher:
     image: "superstreamerapp/stitcher:alpha"
@@ -46,8 +44,7 @@ services:
       - superstreamer-redis
     env_file: .env
     environment:
-      - REDIS_PORT=6379
-      - REDIS_HOST=superstreamer-redis
+      - REDIS_URI=redis://superstreamer-redis:6379
       - PUBLIC_API_ENDPOINT=http://localhost:52001
       - PUBLIC_STITCHER_ENDPOINT=http://localhost:52002
 
