--- a/apps/stitcher/.env.example
+++ b/apps/stitcher/.env.example
@@ -1,6 +1,5 @@
 PORT=52002
-REDIS_HOST=localhost
-REDIS_PORT=6379
+REDIS_URI=redis://localhost:6379
 PUBLIC_S3_ENDPOINT=
 PUBLIC_STITCHER_ENDPOINT=http://localhost:52002
 PUBLIC_API_ENDPOINT=http://localhost:52001
