--- a/docs/package.json
+++ b/docs/package.json
@@ -6,6 +6,7 @@
     "build": "vitepress build"
   },
   "dependencies": {
-    "vitepress": "^1.4.1"
+    "vitepress": "^1.4.1",
+    "vitepress-openapi": "^0.0.3-alpha.62"
   }
 }
