--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "bunx --bun vite",
-    "build": "bunx --bun vite build",
-    "lint": "tsc && eslint"
+    "build": "bunx --bun vite build"
   },
   "devDependencies": {
     "@types/javascript-time-ago": "^2.0.8",
@@ -15,10 +14,9 @@
     "autoprefixer": "^10.4.20",
     "config": "workspace:*",
     "postcss": "^8.4.41",
-    "shared": "workspace:*",
     "tailwindcss": "^3.4.7",
     "vite": "^5.4.10",
-    "eslint": "^9.13.0"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@heroui/react": "2.6.14",
