--- a/apps/stitcher/package.json
+++ b/apps/stitcher/package.json
@@ -7,8 +7,7 @@
     "dev:wrangler": "wrangler dev ./src/index.ts",
     "build": "bun build ./src/index.ts --target=bun --outdir=./dist",
     "deploy:wrangler": "npx wrangler deploy --minify ./src/index.ts",
-    "test": "bun test",
-    "lint": "tsc && eslint"
+    "test": "bun test"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250214.0",
@@ -17,8 +16,7 @@
     "@types/luxon": "^3.4.2",
     "@types/uuid": "^10.0.0",
     "config": "workspace:*",
-    "eslint": "^9.14.0",
-    "typescript": "^5.6.3",
+    "typescript": "^5.8.3",
     "wrangler": "^3.109.1"
   },
   "dependencies": {
@@ -31,7 +29,6 @@
     "luxon": "^3.5.0",
     "redis": "^4.7.0",
     "secure-encrypt": "^1.0.12",
-    "shared": "workspace:*",
     "superjson": "^2.2.1",
     "uuid": "^10.0.0",
     "vast-client": "workspace:*",
