chore: Migrated to biome and fixed formatter warnings

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "dev": "bun --watch --inspect=ws://localhost:6499/sprs-api ./src/index.ts",
-    "build": "bun build ./src/index.ts --target=bun --outdir=./dist && cp -r ./src/db/migrations ./dist"
+    "build": "bun build ./src/index.ts --target=bun --outdir=./dist && cp -r ./src/db/migrations ./dist",
+    "lint": "biome lint --write ./src ./client"
   },
   "devDependencies": {
     "@types/bun": "latest",
