chore: Migrated player to biome

--- a/packages/bolt/package.json
+++ b/packages/bolt/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "main": "./src/index.ts",
+  "scripts": {
+    "lint": "biome lint --write ./src"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "config": "workspace:*",
